[tool.poetry]
name = "thesis_project"
version = "0.1.0"
description = ""
authors = ["TitoGrine <tito999@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9"
bloom-filter2 = "^2.0.0"
bs4 = "^0.0.1"
chromedriver-autoinstaller = "^0.3.1"
spacy = "^3.2.4"
numpy = "^1.22.3"
scipy = "^1.8.0"
gensim = "4.1.2"
nltk = "^3.7"
regex = "^2022.4.24"
requests = "^2.27.1"
selenium = "^4.1.3"
tweepy = "^4.8.0"
wordfreq = "^3.0.1"
validators = "^0.18.2"
python-decouple = "^3.6"
lxml = "^4.8.0"
elasticsearch = "^8.2.0"
pyspark = "^3.2.1"
fastapi = "^0.78.0"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
sse-starlette = "^0.10.3"
asyncio = "^3.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
